<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="24dp"
    android:paddingRight="24dp"
    android:paddingLeft="24dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/send_feedback_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingTop="8dp"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:alpha="0.5"
            android:minWidth="20dp"
            android:padding="8dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="20dp"
            android:padding="8dp"
            android:background="@null"
            android:textSize="14sp"
            android:text="@string/send_feedback"/>

    </LinearLayout>


</LinearLayout>